# Optimistic-Oracle

./: .gitignore  README.md
.github/workflows/: test.yml
optimistic_oracle/: Scarb.toml  abi.ts
optimistic_oracle/src/: lib.cairo
optimistic_oracle/src/contracts/: finder.cairo  interfaces.cairo  optimistic_oracle.cairo  optimistic_oracle_v1.cairo
optimistic_oracle/src/contracts/common/: address_whitelist.cairo
optimistic_oracle/src/contracts/data_verification/: identifier_whitelist.cairo  store.cairo
optimistic_oracle/src/contracts/escalation_manager/: base_escalation_manager.cairo  whitelisted_escalation_manager.cairo
optimistic_oracle/src/contracts/mocks/: full_erc20.cairo  mock_erc20.cairo  mock_oracle.cairo  oracle_ancillary.cairo
optimistic_oracle/src/contracts/utils/: ancillary_data.cairo  constants.cairo  convert.cairo  keccak.cairo
optimistic_oracle/src/examples/: prediction_market.cairo
optimistic_oracle/src/tests/: setup.cairo  test_address_whitelist.cairo  test_finder.cairo  test_identifier_whitelist.cairo  test_optimistic_oracle.cairo  test_oracle_ancillary.cairo
scripts/: Cargo.toml  build.rs  sepolia_deployments.json
scripts/bind/: address_whitelist.rs  finder.rs  identifier_whitelist.rs  mock_oracle_ancillary.rs  optimistic_oracle_v1.rs  store.rs
scripts/src/: build.rs  deploy.rs  lib.rs  main.rs  types.rs  utils.rs
scripts/src/bind/: address_whitelist.rs  finder.rs  identifier_whitelist.rs  mock_oracle_ancillary.rs  mod.rs  optimistic_oracle_v1.rs  store.rs
