[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cainome = { git = "https://github.com/cartridge-gg/cainome", tag = "v0.2.9", features = [
    "abigen-rs",] }
tokio = { version = "1.28.1", features = ["full"] }
anyhow = "1.0.71"
dotenv = "0.15.0"
starknet = "0.10.0"
url = "2.5.2"
eyre = { version = "0.6.8" }
serde_json = "1.0"
serde = { version = "1.0.162", default-features = false, features = ["derive"] }
log = "0.4"
env_logger = "0.11.5"


