[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.test]
opt-level = 2
overflow-checks = true

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = "abort"
rpath = false

[dependencies]
cainome = { git = "https://github.com/cartridge-gg/cainome", tag = "v0.3.1", features = [
    "abigen-rs",] }
tokio = { version = "1.28.1", features = ["full"] }
anyhow = "1.0.71"
dotenv = "0.15.0"
starknet = "0.11.0"
url = "2.5.2"
eyre = { version = "0.6.8" }
serde_json = "1.0"
serde = { version = "1.0.162", default-features = false, features = ["derive"] }
log = "0.4"
env_logger = "0.11.5"
ethers = "2.0.7"



[build-dependencies]
ethers = "2.0.7"
cainome = { git = "https://github.com/cartridge-gg/cainome", tag = "v0.3.1", features = [
    "abigen-rs",
] }
